# ssec-core

./: .gitignore  Cargo.toml  README.md  SPEC.md  build_spec.sh  flake.nix
.github/workflows/: test.yml
src/: brotli_stream.rs  chaff.rs  decrypt.rs  encrypt.rs  lib.rs  tests.rs  util.rs
