[package]
name = "ssec-core"
version = "0.6.1"
edition = "2024"
description = "streaming implementation of the SSEC file format"
categories = [ "asynchronous", "encoding", "security" ]
authors = [ "James Connolly <me@j-conn.com>" ]
license = "MIT OR Apache-2.0"
repository = "https://github.com/james-conn/ssec-core"

include = [
	"/Cargo.toml",
	"/src/*.rs",
	"LICENSE-MIT",
	"LICENSE-APACHE"
]

[dependencies.argon2]
version = "0.6.0-rc.0"
default-features = false
features = [ "alloc", "zeroize" ]

[dependencies]
futures-core = "0.3"
bytes = "1"
rand_core = "0.9"
ctr = { version = "0.10.0-rc.0", features = [ "zeroize" ] }
hmac = { version = "0.13.0-rc.0", features = [ "zeroize" ] }
sha3 = { version = "0.11.0-rc.0", features = [ "zeroize" ] }
pin-project-lite = "0.2"
aes = { version = "0.9.0-rc.0", features = [ "zeroize" ] }
zeroize = "1"
constant_time_eq = "0.4"

[dev-dependencies.tokio]
version = "1"
features = [ "rt", "macros" ]

[dev-dependencies.rand]
version = "0.9"
default-features = false
features = [ "std_rng" ]

[dev-dependencies.futures-util]
version = "0.3"
default-features = false

# turns out running a key derivation function with no optimization is slow, who would have guessed?
[profile.test]
opt-level = 1
